Fix bug reporting unified logging details missing.